--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+.app-container{
+  /* background-color: #5B5049; */
+  /* background-image: linear-gradient(#2B1F13, #715B45,#8C8173); */
+  /* color: white; */
+  background-color: #08546C;
+  background-size: cover;
+  height: auto;
+  padding: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-container{
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* .nav-container { */
+  /* background-color: #08546C; */
+  /* position: sticky; */
+  /* position: fixed; */
+  /* width: 100%; */
+  /* padding: 20px; */
+  /* top: 0;
+  width: 100%; */
+/* Set a consistent height */
+  /* display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  padding-top: 10px;
+  z-index: 1000; */
+  /* padding: 0 20px; */
+/* } */
+
+
+
+/* .nav-container {
+  background-color: #08546C;
+  position: sticky;
+  position: fixed;
+  width: 100%;
+  padding: 20px;
+  top: 0;
+  width: 100%;
+  height: 70px; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 10px;
+  z-index: 1000;
+  padding: 0 20px;
+} */
+
+.tab-list{
+  list-style-type: none;
+  height: 70%;
+}
+
+.nav-head-anchor{
+  text-decoration: none;
+}
+
+
+.nav-heading { 
+  font-size: 35px;
+  margin-top: 0;
+  /* padding-top: 10px; */
+  margin-bottom: 0;
+  font-weight: 400;
   color: white;
+  padding-left: 30px;
+  /* position: fixed; */
 }
 
-.App-link {
-  color: #61dafb;
+.alingment{
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.mobile-menu-link{
+  background-color: #08546C;
+  display: none;
+}
+
+
+.header-container {
+  background-color: #08546C;
+  /* display: flex; */
+  /* justify-content: space-between; */
+  padding-top: 20px;
+  position: fixed;
+  /* height: 100%; */
+  width: 100%;
+  z-index: 1000; 
+  top: 0;
+}
+
+.hamburger-menu-anchor{
+  margin-right: 10px;
+}
+
+.hamburger-icon{
+  padding-top: 15px;
+}
+
+
+@media (min-width:768px) {
+  .nav-heading{
+      font-size: 45px !important;
   }
-  to {
-    transform: rotate(360deg);
+  .mobile-hamburger{
+      display: none;
   }
+  .tab-list{
+      display: flex;
+      justify-content: space-between;
+      margin-right: 20px;
+  }
+  .header-container {
+      background-color: #08546C;
+      display: flex;
+      justify-content: space-between;
+      padding-top: 20px;
+      position: fixed;
+      width: 100%;
+      z-index: 1000; 
+      top: 0;
+  }
+  .nav-container{
+      display: block !important;
+  }
+  
 }
