--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,69 +1,49 @@
-/* .bg-container{ */
-    /* background-color: #96858F; */
-    /* background-image: linear-gradient(#0f2862, #091f36,#4f5f76); */
-    /* height: 100vh; */
-    /* color: #D5D5D5; */
-    /* color: white; */
-    /* background-color: black; */
-    /* color: #9e363a; */
-/* } */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+.word-container{
+    /* font-size: 34px;
+    font-weight: 600;
+    font-family: "DM Serif Display", serif; */
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    /* justify-content: center; */
+}
 
 .home-container{
-    /* display: flex; */
-    padding-top: 80px;
-    /* padding-left: 50px; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* align-self: center; */
+    /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703713/Copy_of_IMG-20230616-WA0009_3_bdrmdm.jpg'); */
+    background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732957873/Copy_of_IMG-20230616-WA0009_1_mobile-view_bocxsw.jpg');
+    /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703459/Copy_of_IMG-20230616-WA0009_3_wwdofw.jpg'); */
+    /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703256/Copy_of_IMG-20230616-WA0009_1_zapbdw.jpg'); */
+    /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732702687/Copy_of_IMG-20230616-WA0009_1_oyykdm.jpg?'); */
+    /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732701997/Copy_of_IMG-20240107-WA0009_g5bkft.jpg'); */
+    /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732698593/Copy_of_IMG-20230616-WA0009_rdya8t.jpg'); */
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;  
 }
+
 .bg-container {
     color: #fff;
     
 }
 
-.profile-img-top{
-    /* padding-right: 50px; */
-    padding-top: 60px;
-
-}
-
-.profile-img{
-    display: none !important;
-}
-
-
-.profile{
-    /* padding-top: 60px; */
-    background-size:cover;
-    background-position: center center;
-    height: 250px;
-    width: 300px;
-    box-shadow: 0 20px 5px 5px rgba(0, 0, 0, 0.2);
-    animation: animate 5s ease-in-out infinite;
-    transition: all 1s ease-in-out;
-
-}
-
-@keyframes animate {
-    0%{
-        border-radius: 60% 40% 30% 70%/60% 30%
-        70% 40%;
-    }
-    50%{
-        border-radius: 30% 60% 70% 40%/50% 60%
-        30% 60%;
-    }
-    100%{
-        border-radius: 60% 40% 30% 70%/60% 30%
-        70% 40%;
-    }
-    
+.header-name{
+    font-family: "DM Serif Display", serif;
 }
 
 .heading-name{
-    animation: move2right 1.5s ease-in-out;
+    /* animation: move2right 1.5s ease-in-out; */
     /* padding-left: 3vmin; */
     position: relative;
+    font-family: "DM Serif Display", serif;
+  font-weight: 300 !important;
+  /* font-style: normal; */
+  /* font-style: italic; */
+  color: #000;
+  color: #fff;
 }
 
 @keyframes move2right {
@@ -72,102 +52,66 @@
     
 }
 
-
-
-
-/* .animated-text .sp-role::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-
-    height: 100%;
-    width: 100%;
-    background-color:#08546C ;
-    border-left: 3px solid #cb494e;
-    animation:cursor .5s infinite, typing 5s steps(20) infinite;
-} */
-
-/* @keyframes typing {
-    100% {
-        left: 100%;
-        margin: 0 -35px 0 35px;
-    }
-} */
-
-
-
-
-/* @keyframes cursor{
-    50% {border-color: transparent;}
-}
- 
-@keyframes typing {
-    from {width: 0;}
-}  */
-
-
-/* @keyframes typing{
-    40%, 60%{left: 100%;}
-    100%{left: 0;}
-    
-} */
-
 @keyframes cursor {
     to{
         border-left: 2px solid #08546C;
     }
 }
+.word-container{
+    color: #fff;
+}
 
+.para-greet{
+    font-size: 20px;
+}
+.para-role{
+    font-size: 20px;
+}
 
 @media only screen and (min-width: 768px) {
     .home-container{
+        /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703713/Copy_of_IMG-20230616-WA0009_3_bdrmdm.jpg'); */
+        background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703587/Copy_of_IMG-20230616-WA0009_3_izn1ii.jpg');
+        /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703459/Copy_of_IMG-20230616-WA0009_3_wwdofw.jpg'); */
+        /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732703256/Copy_of_IMG-20230616-WA0009_1_zapbdw.jpg'); */
+        /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732702687/Copy_of_IMG-20230616-WA0009_1_oyykdm.jpg?'); */
+        /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732701997/Copy_of_IMG-20240107-WA0009_g5bkft.jpg'); */
+        /* background-image: url('https://res.cloudinary.com/dadtgoi5h/image/upload/v1732698593/Copy_of_IMG-20230616-WA0009_rdya8t.jpg'); */
+        background-size: cover;
+        height: 100vh;
         display: flex;
-        padding-top: 80px;
-        padding-left: 50px;
-        /* align-items: center; */
-        /* justify-content: center; */
-        /* align-self: center; */
-    }
-    .profile-img{
-        padding-right: 50px;
-        padding-top: 80px;
-        display: block !important;
-        
-    }
-
-    .profile-img-top{
-        display: none;
-    }
-
-    .profile{
-        height: 400px;
-        width: 450px;
+        justify-content: center;  
     }
     .sp-role{
         font-size: 50px !important;
         font-weight: 500;
-        color: #cb494e;
-    
     }
     .animated-para{
         font-size: 28px !important;
         margin-bottom: 0;
     }
     .heading-name {
-        font-size: 90px !important;
-        font-weight: 800;
+        font-size: 80px !important;
+        font-weight: 400 !important;
+
+    }
+    .para{
+        font-size: 28px;
         margin-top: 0;
-        margin-bottom: 0;
     }
     .para-greet {
         font-size: 28px !important;
-        margin-bottom: 4px;
+        margin-bottom: 0 !important;
+    }
+    .para-role {
+        font-size: 28px !important;
+        margin-top: 0;
     }
     .intro{
         font-size: 18px !important;
         max-width: 90%;
         margin-top: 17px;
+        
     }
     .btn-git{
         margin-left: 10px;
@@ -180,131 +124,12 @@
     margin-bottom: 0;
 }
 
-/* .animated-text {
-    position: relative;
-}
-
-.animated-text .sp-role::before{
-    animation: words 20s infinite;
-} */
-
-/* .animated-text .sp-role::after{
-    content: "";
-    position: absolute;
-    width: calc(100%+8px);
-    height: 100%;
-    background-color: #08546C ;
-    border-left: 2px solid #cb494e ;
-    right: -8px;
-    animation: cursor .8s infinite typing 20s steps(20) infinite;
-} */
-
-/* @keyframes cursor {
-    to{
-        border-left: 2px solid #08546C;
-    }
-} */
-
- 
-
-/* @keyframes typing {
-    10%,15%,30%,35%,50%,55%,70%,75%,90%,95%{
-        width: 0;
-    }
-    5%,20%,25%,40%,45%,60%,65%,80%,85%{
-        width: calc(100%+8px);
-    }
-} */
-
 .sp-role{
     font-size: 30px;
-    font-weight: 500;
-    color: #cb494e;
-}
-
-/* .wrapper span::after{
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    border-left: 2px solid #da5029;
-    animation: typing 4.0s steps(19) infinite;
-    background: #08546C;
-} */
-
-/* @keyframes typing {
-    100% {
-        left: 100%;
-        margin: 0 -35px 0 35px;
-    }
-} */
-
-
-
-
-/* @keyframes cursor{
-    50% {border-color: transparent;}
-}
-
-@keyframes typing {
-    from {width: 0;}
-} */
-
-
-.btn-resume{
-    height: 60px;
-    width: 160px;
-    background-color: white;
-    border-radius: 15px;
-    /* border-color: #9e363a; */
-    /* color: #9e363a; */
-    font-weight: 600;
-    border: none;
-    outline: none;
-    font-size:15px;
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    margin-top: 16px;
-}
-
-.btn-resume::after{
-    content: "Resume";
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 0.5s all;
-    /* color: #b0a8a8; */
-    color: white;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: #555; */
-    background-color: #9e363a;
-    /* border-radius: 0px; */
-}
-
-.btn-resume:hover.btn-resume::after{
-    transform: translateX(100%);
-}
-
-.btn-git{
-    height: 60px;
-    width: 160px;
-    border-radius: 15px;
-    cursor: pointer;
-    /* border-color: white; */
-    /* background-color: #000; */
-    background-color: #0d0d0d;
-    color: #fff;
-    font-weight: 600;
-    font-size:15px;
-    margin-left: 8px;
-    margin-top: 10px;
-    /* display: flex; */
+    /* font-weight: 500; */
+    font-family: "DM Serif Display", serif;
+    /* color: #000; */
+    /* color: #cb494e; */
 }
 
 .connect {
@@ -324,9 +149,4 @@
     font-weight: 800;
     margin-top: 0;
     margin-bottom: 0;
-}
-.intro{
-    font-size: 16px;
-    max-width: 90%;
-    margin-top: 17px;
 }
