--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,18 @@
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .app-container{
-  /* background-color: #5B5049; */
-  /* background-image: linear-gradient(#2B1F13, #715B45,#8C8173); */
-  /* color: white; */
-  background-color: #08546C;
   background-size: cover;
   height: auto;
-  padding: 30px;
 }
 
 .nav-container{
   height: 100%;
 }
 
-
-/* .nav-container { */
-  /* background-color: #08546C; */
-  /* position: sticky; */
-  /* position: fixed; */
-  /* width: 100%; */
-  /* padding: 20px; */
-  /* top: 0;
-  width: 100%; */
-/* Set a consistent height */
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 10px;
-  z-index: 1000; */
-  /* padding: 0 20px; */
-/* } */
-
-
-
-/* .nav-container {
-  background-color: #08546C;
-  position: sticky;
-  position: fixed;
-  width: 100%;
-  padding: 20px;
-  top: 0;
-  width: 100%;
-  height: 70px; 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 10px;
-  z-index: 1000;
-  padding: 0 20px;
-} */
-
 .tab-list{
   list-style-type: none;
-  height: 70%;
+  height: 100vh;
+  font-family: "Poppins", serif;
 }
 
 .nav-head-anchor{
@@ -59,15 +20,14 @@
 }
 
 
+
 .nav-heading { 
-  font-size: 35px;
-  margin-top: 0;
-  /* padding-top: 10px; */
-  margin-bottom: 0;
+  font-size: 25px;
   font-weight: 400;
-  color: white;
+  color: #000;
   padding-left: 30px;
-  /* position: fixed; */
+  font-family: "Poppins", serif;
+  margin-bottom: 7px;
 }
 
 .alingment{
@@ -76,21 +36,16 @@
 }
 
 .mobile-menu-link{
-  background-color: #08546C;
   display: none;
 }
 
 
 .header-container {
-  background-color: #08546C;
-  /* display: flex; */
-  /* justify-content: space-between; */
-  padding-top: 20px;
   position: fixed;
-  /* height: 100%; */
+  /* height: 100vh; */
   width: 100%;
-  z-index: 1000; 
-  top: 0;
+  z-index: 1000;
+  background-color: #fff; 
 }
 
 .hamburger-menu-anchor{
@@ -98,13 +53,17 @@
 }
 
 .hamburger-icon{
-  padding-top: 15px;
+  padding-top: 30px;
+  /* margin-bottom: 0; */
 }
 
 
 @media (min-width:768px) {
   .nav-heading{
-      font-size: 45px !important;
+      font-size: 25px !important;
+      color: #000;
+      font-family: "Poppins", serif;
+      margin-bottom: 0;
   }
   .mobile-hamburger{
       display: none;
@@ -112,20 +71,37 @@
   .tab-list{
       display: flex;
       justify-content: space-between;
+      font-size: 20px;
       margin-right: 20px;
+      /* margin-top: 30px; */
+      padding-right: 40px;
   }
   .header-container {
-      background-color: #08546C;
+      /* background-color: #08546C; */
       display: flex;
       justify-content: space-between;
-      padding-top: 20px;
+      align-items: center;
+      padding: 10px;
+      padding-left: 40px;
       position: fixed;
       width: 100%;
       z-index: 1000; 
       top: 0;
+      background-color: transparent; 
+      height: 50px;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+  transform: translateY(-100%); /* Navbar is hidden initially */
+  opacity: 0; 
   }
   .nav-container{
       display: block !important;
   }
+  .sticky{
+  background-color: #fff;
+  color: #000;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transform: translateY(0); /* Navbar slides into view */
+  opacity: 1;
   
+  }
 }
