--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,37 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .form-container{
+padding-top: 5px;
+}
+
+.get-in-touch{
+    padding-top:10px ;
+
+}
+
+.contact-container{
+    background-color: #000;
+    padding-top: 15px;
+    font-family: "Open Sans", sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    padding: 30px;
+}
 
-    /* width: 100%; */
+
+.contact-info-alignment{
+    display: flex;
+    color: gray;
+}
+.contact-location{
+    padding-left: 20px;
+
+}
+.contact-icon{
+    margin-top: 10px;
+    color: gray;
+}
+
+.contact-anchor{
+    cursor: pointer;
 }
 
 .contact-heading {
-    text-align: center;
+    /* text-align: center; */
     font-size: 30px;
-    color: #fff;
+    color: gray;
 }
 
 .input{
     width: 320px;
     height: 30px;
-    border-radius: 3px;
-    border: none;
+    /* border-radius: 3px; */
+    border: 2px solid gray;
     padding: 10px;
     margin-top: 6px;
-    border: none;
-    outline: none;
+    /* border: none;
+    outline: none; */
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    color: gray;
+    background-color: transparent;
     /* margin-top: 5px; */
 }
 
+
+.input:hover{
+    background-color: #fff;
+}
+
 @media (min-width: 768px) {
-    .contact-heading {
-        text-align: center;
-        font-size: 45px;
-        color: #fff;
+    .contact-container{
+        background-color: #000;
+        padding-top: 40px !important;
+        display: flex;
+        flex-direction: row !important;
+        justify-content: space-around !important;
+        padding: 30px;
     }
+    .contact-heading {
+        /* text-align: center; */
+        font-size: 30px;
+        color: gray;
+    }
+
     .input{
         width: 480px;
         height: 30px;
@@ -39,68 +87,72 @@
         border: none;
         padding: 10px;
         margin-top: 6px;
-        border: none;
-        outline: none;
-        /* margin-top: 5px; */
+        border: 2px solid gray;
+        text-transform: uppercase;
+        color: gray;
+        background-color: transparent;
+        margin-bottom: 10px;
     }
 
     .text-area {
         border-radius: 3px;
         padding: 10px;
-        font-family:'Roboto';
+        font-family: "Open Sans", sans-serif;
         margin-top: 6px;
         resize: none;
         width: 480px !important;
-        border: none;
-        outline: none;
     }
 
     .submit-btn {
-    width: 493px !important;
-    height: 40px;
-    border-radius: 10px;
-    border: none;
+    width: 495px !important;
+    height: 45px !important;
+    /* border-radius: 10px; */
+    /* border: none; */
     margin-top: 5px;
     margin-bottom: 5px;
-    background-color: #0d727b;
     color: white;
     font-size: 15px;
     cursor: pointer;
     transition: .5s;
-    }
-
-    .submit-btn:hover{
-        background-color: #0FA4AF;
     }
 
 }
 
 .text-area {
-    border-radius: 3px;
+    /* border-radius: 3px; */
     padding: 10px;
     font-family:'Roboto';
     margin-top: 6px;
     resize: none;
     width: 320px;
-    height: 150px;
-    border: none;
-    outline: none;
+    height: 120px;
+    border: 2px solid gray;
+    text-transform: uppercase;
+    color: gray;
+    background-color: transparent;
+}
+
+.text-area:hover{
+    background-color: #fff;
 }
 
 .submit-btn {
-    width: 340px;
+    width: 345px;
     height: 40px;
-    border-radius: 10px;
-    border: none;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    background-color: #0d727b;
-    color: white;
-    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #fff;
+    font-size: 12px;
     cursor: pointer;
     transition: .5s;
+    border: 2px solid gray;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: rgb(152, 148, 148);
 }
 
 .submit-btn:hover{
-    background-color: #0FA4AF;
+    background-color: #fff;
+    color: #000;
+    border: 2px solid #000;
 }
