--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,11 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .ed-heading {
     font-size: 30px;
-    font-weight: 780;
-    color: #fff;
+    font-weight: 700;
+    color: #000;
+    
+}
+.ed-container{
+    /* background-color: rgb(225, 219, 219); */
+    background-color: rgb(214, 212, 212);
+    font-family: "Open Sans", sans-serif;
+    padding: 10px;
 }
 
 @media (min-width: 768px) {
     .ed-heading{
         font-size: 45px;
+        padding-top: 10px;
+
+    }
+    .ed-container{
+        background-color: rgb(214, 212, 212);
+        /* background-color: rgb(225, 219, 219); */
+        /* background-color: linear-gradient(to top, rgb(157, 156, 156), #999898); */
+        font-family: "Open Sans", sans-serif;
+        padding-left: 50px;
+        font-weight: 700;
+        padding-top: 10px;
     }
 }
