--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .footer-container{
-    background-color: #056780;
-    padding: 1px;
-    color: #fff;
+    margin-top: 20px;
+    color: gray;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
-    /* align-items: center; */
-    /* height: 150px; */
+    font-family: "Open Sans", sans-serif;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-social-icons{
+    color: gray;
+    cursor: pointer;
+    margin: 9px;
+}
+
+.footer-social-icons:hover{
+    color: #000;
 
 }
 
@@ -17,26 +28,11 @@
 .copy-right-text{
     display: none;
 }
-.name{
-    margin-bottom: 0;
-    text-align: center;
-}
-.p-role{
-    margin-top: 0;
-    text-align: center;
-
-}
 .copy-right{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.icon{
-    height: 40px;
-    width: 40px;
-    margin-bottom: 15px;
 }
 
 .footer-icons-container{
@@ -45,58 +41,14 @@
     justify-content: center;
 }
 
-.git{
-    height: 45px;
-    width: 40px;
-    
-}
-
-.git-anchor{
-   margin-bottom: 0;
-   padding-right: 4px;
-}
-
-.footer-linkedin{
-    height: 36px;
-    width: 34px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.footer-mail{
-    height: 30px;
-    width: 36px;
-    margin-left: 10px;
-}
-.mail-anchor{
-    margin-top: 6px;
-}
-
-
 .cr-icon{
     height: 12px;
 }
 
 @media (min-width: 768px) {
     .footer-container{
-        background-color: #056780;
-        padding: 1px;
-        color: #fff;
-        display: flex;
-        flex-direction: row !important;
-        justify-content: space-around;
-        /* align-items: center; */
+        margin-top: 10px !important;
         height: 150px;
-    
-    }
-
-    .name{
-        margin-bottom: 0;
-        /* text-align: center; */
-    }
-    .p-role{
-        margin-top: 0;
-        text-align: center;
     
     }
     .footer-icons-container{
@@ -108,10 +60,5 @@
     }
     .copy-right-text-sm{
         display: none;
-    }
-    .icon{
-        height: 40px;
-        width: 40px;
-        margin-bottom: 0;
     }
 }
