--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,27 +1,10 @@
-/* .nav-container { */
-    /* display: flex;
-    flex-direction: row;
-    justify-content: space-between; */
-    /* background-color: #325172; */
-    /* background-color:  #0f2862; */
-    
-    /* color: #c89666; */
-    /* height: 70px;
-    padding: 10px;
-    color: white; */
-    /* text-decoration: none !important; */
-    /* background-image: linear-gradient(to top,#0f2862, #091f36,#4f5f76); */
-/* } */
-
-/* .nav-container{
-    position: fixed;
-} */
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .active-tab-btn {
-    text-decoration: underline;
-    color: rgb(245, 66, 96);
+    /* text-decoration: underline; */
+    /* color: rgb(245, 66, 96); */
     padding-right: 18px;
-    font-size: 20px;
+    font-size: 15px;
+    color: rgb(243, 173, 107);
   }
 
 .nav-items{
@@ -32,6 +15,17 @@
   @media (min-width:768px) {
     .hamburger-cont{
         display: none;
+    }
+    .active-tab-btn{
+        text-decoration: none !important;
+        font-size: 15px !important;
+        font-family: "Poppins", serif;
+        font-weight: 400;
+    }
+    .anchor{
+        font-size: 15px;
+        font-family: "Poppins", serif;
+        font-weight: 400;
     }
   }
 
@@ -45,31 +39,7 @@
 .anchor{
     text-decoration: none;
     padding-right: 18px;
-    font-size: 20px;
-    color: white;
+    font-size: 15px;
+    color: #000;
 }
 
-
-/* .home{
-    padding-right: 18px;
-    font-size: 18px; */
-    /* color: white; */
-/* } */
-
-.skill{
-    padding-right: 18px;
-    font-size: 18px;
-    color: white;
-}
-
-.work{
-    padding-right: 18px;
-    font-size: 18px;
-    color: white;
-}
-
-.education{
-    padding-right: 18px;
-    font-size: 18px;
-    color: white;
-}
