--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -15,20 +15,11 @@ body {
     background-color: #eee;
 } */
 
-.project-container{
-    display: flex;
-    flex-wrap: wrap; /* Allows cards to wrap to the next line */
-    /* justify-content: space-around; Spreads the cards evenly */
-    gap: 20px; /* Adds spacing between cards */
-    padding: 20px;
-    justify-content: center;
-    
-}
 
 /**
 * CARD
 **/
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .card {
     /* position: relative;
     top: 50%;
@@ -53,6 +44,12 @@ body {
 
 }
 
+/* @media (max-width:568px) {
+    .card{
+        width: 350px;
+    }
+} */
+
 .card a {
     color: inherit;
     text-decoration: none;
@@ -64,6 +61,8 @@ body {
 
 .project-heading{
     font-size: 40px;
+    color: #fff;
+    text-align: center;
 }
 
 /**
@@ -248,16 +247,49 @@ body {
     padding-left: 10px;
 }
 
+.project-container{
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap; /* Allows cards to wrap to the next line */
+    /* justify-content: space-around; Spreads the cards evenly */
+    gap: 20px; /* Adds spacing between cards */
+    padding: 20px;
+    justify-content: center;
+    background-color: #000;
+    margin-top: 40px;
+    
+}
+
 .project-heading{
     font-size: 30px;
     /* padding-bottom: 0; */
-    font-weight: 780;
+    font-weight: 700;
     color: #fff;
+    /* padding: 10px; */
+    padding-bottom: 0;
+
+}
+.p-container{
+    background-color: #000;
+    font-family: "Open Sans", sans-serif;
+    padding: 10px;
+    /* text-align: center; */
 
 }
 
 @media (min-width: 768px) {
     .project-heading{
         font-size: 45px;
+        padding-left: 50px;
+        padding-top: 10px;
+        padding-bottom: 0;
+        text-align: center;
+
+    }
+    .p-container{
+        background-color: #000;
+        font-family: "Open Sans", sans-serif;
+        padding-bottom: 30px;
+        padding-top: 20px;
     }
 }
