--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,17 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .skill-box-container{
-    border: solid 3px;
+    border: solid 3px #000;
     width: 500px; /* Box width */
   height: auto; /* Box height */
-  /* display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column; */
-  /* justify-content: center; */
     border-radius: 20px;
+    /* margin-bottom: 30px; */
     /* border-color: #022534; */
-    border-color: #ADBACC;
-    color: white;
+    /* border-color: #ADBACC; */
+    /* color: white; */
     padding-bottom: 4px;
+    font-family: "Open Sans", sans-serif;
     
 }
 .heading{
@@ -20,6 +19,13 @@
     font-weight: 450;
     
 }
+
+.skill-con{
+    padding: 10px;
+    padding-bottom: 30px;
+    background-color: rgb(214, 212, 212);
+}
+
 .item-db {
     display: flex;
     align-items: center;
@@ -31,6 +37,7 @@
 .logo{
     height: 30px;
     width: 30px;
+
     background-color: transparent;
 }
 .span-js{
@@ -40,20 +47,28 @@
     padding-top: 30px;
     font-size: 30px;
     font-weight: 780;
-    color: #fff;
+    text-align: center;
 }
 
 @media (min-width: 768px) {
     .skill-heading{
-        padding-top: 90px;
-        font-size: 45px;
-        font-weight: 780;
-        color: #fff;
+        padding: 10px;
+        font-size: 50px;
+        padding-left: 50px;
+        font-weight: 700;
+        color: #000;
+        margin-bottom: 0;
+        font-family: "Open Sans", sans-serif;
+        text-align: left;
+    }
+    .skill-con{
+        padding-bottom: 50px;
     }
 }
 
 .span-name{
     margin-bottom: 5px;
+    padding-left: 4px;
 }
 
 
@@ -62,10 +77,9 @@
     width: 120px;
 
     margin: 10px;
-    border: 2px solid white;
+    border: 2px solid rgb(53, 51, 51);
     border-radius: 8px;
-
-    color: white;
+    /* color: white; */
     background-color: transparent;
     display: flex;
     justify-content: center;
